#******************************************************************************
#   Copyright 2020 Embedded Office GmbH & Co. KG
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
#******************************************************************************

# CiA301 types
add_subdirectory(co_emcy_hist)
add_subdirectory(co_emcy_id)
add_subdirectory(co_hb_cons)
add_subdirectory(co_hb_prod)
add_subdirectory(co_para_store)
add_subdirectory(co_para_restore)
add_subdirectory(co_pdo_event)
add_subdirectory(co_pdo_id)
add_subdirectory(co_pdo_map)
add_subdirectory(co_pdo_num)
add_subdirectory(co_pdo_type)
add_subdirectory(co_sdo_id)
add_subdirectory(co_sync_cycle)
add_subdirectory(co_sync_id)
